# vanilla-chat-server

./: .env  Cargo.toml  README.md  docker-compose.yaml
src/: main.rs
src/api/: mod.rs  state.rs
src/api/dto/: mod.rs  start_twitch_request.rs  stop_twitch_request.rs
src/api/ws/: mod.rs  ws_twitch_handler.rs
src/application/: mod.rs
src/application/commands/: mod.rs  start_twitch.rs
src/application/ports/: user_repository.rs
src/domain/models/: mod.rs  twitch_account.rs
src/infrastructure/db/: postgres_user_repository.rs
src/infrastructure/utils/: mod.rs  redis_utils.rs
